# invoke using: mkdir -p build && cd build && cmake .. -DPICO_BOARD=pico2 && cd ..

cmake_minimum_required(VERSION 3.13)

if (NOT DEFINED ENV{PICO_SDK_PATH})
  set(ENV{PICO_SDK_PATH} "../pico-sdk/")
endif()

if (NOT DEFINED PICO_TOOLCHAIN_PATH)
    execute_process(
        COMMAND bash -c "dirname $((find $\{HOME\}/Downloads -name arm-none-eabi-gcc | sort; find /Applications/ArmGNUToolchain -name arm-none-eabi-gcc | sort) | tail -n1)"
        OUTPUT_VARIABLE PICO_TOOLCHAIN_PATH
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
endif()

# initialize the SDK directly
include($ENV{PICO_SDK_PATH}/pico_sdk_init.cmake)

project(my_project)

# initialize the Raspberry Pi Pico SDK
pico_sdk_init()

# add some warning flags
set("CMAKE_C_FLAGS" "${CMAKE_C_FLAGS}  -Wall -Wextra -Wshadow")

# rest of your project
add_executable(rp2350_i2s
    driver.c
    ../rp2350_i2s/rp2350_i2s.c
    main.c
)

pico_generate_pio_header(rp2350_i2s ${CMAKE_CURRENT_LIST_DIR}/../rp2350_i2s/rp2350_i2s_out_16bit_2ch.pio)

# pull in common dependencies
target_link_libraries(rp2350_i2s pico_stdlib hardware_xosc cmsis_core hardware_pio hardware_dma hardware_i2c)

# create map/bin/hex/uf2 file in addition to ELF.
pico_enable_stdio_usb(rp2350_i2s 1)
pico_add_extra_outputs(rp2350_i2s)
